# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  file.txt  main.cpp
InputExample-Linux/: InputGenerator.cpp
WindowsView/: CMakeLists.txt  window.cpp  window.h
lib/include/: Colors.h  DocumentHandle.h  Editor.h  InputHandle.h  MajorKeys.h  cursor.h
lib/src/: DocumentHandle.cpp  Editor.cpp  InputHandle.cpp  cursor.cpp
